payment system added

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-# REACT_APP_API=http://localhost:4000/api/v1
-REACT_APP_API=https://assign-ecom.onrender.com/api/v1
+REACT_APP_API=http://localhost:4000/api/v1
+# REACT_APP_API=https://assign-ecom.onrender.com/api/v1
